[gd_scene load_steps=2 format=3 uid="uid://dach13qy4uuxl"]

[ext_resource type="Script" uid="uid://c3fjgh71i2a7r" path="res://scenes/login.gd" id="1_pymad"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pymad")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999403, 0.996691)
alignment = 1

[node name="Name" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Name"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "USER NAME"

[node name="UsernameField" type="LineEdit" parent="VBoxContainer/Name"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Pass word"

[node name="PasswordField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "로그인"

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
